// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register should render Register component if loading user 1`] = `
<DocumentFragment>
  <h1
    class="text-center my-5 p-5 bg-info text-white w-75 mx-auto"
  >
    Loading...
  </h1>
</DocumentFragment>
`;

exports[`Register should render Register component if no user is logged in 1`] = `
<DocumentFragment>
  <main
    class="container"
  >
    <div
      class="m-4 row"
    >
      <div
        class="col"
      >
        <form
          action="#"
          class="container"
        >
          <div
            class="row"
          >
            <h1>
              Register
            </h1>
          </div>
          <div
            class="mx-2 px-2 py-2 row"
          >
            <label
              for="fullName"
            >
              Full Name
            </label>
            <input
              class="form-text-input"
              id="0"
              name="fullName"
              placeholder="Jane Doe"
              type="text"
              value=""
            />
          </div>
          <div
            class="mx-2 px-2 py-2 row"
          >
            <label
              for="username"
            >
              Username
            </label>
            <input
              class="form-text-input"
              id="1"
              name="username"
              placeholder="Jane"
              type="text"
              value=""
            />
          </div>
          <div
            class="mx-2 px-2 py-2 row"
          >
            <label
              for="email"
            >
              Email
            </label>
            <input
              class="form-text-input"
              id="2"
              name="email"
              placeholder="Jane.Doe@gmail.com"
              type="email"
              value=""
            />
          </div>
          <div
            class="mx-2 px-2 py-2 row"
          >
            <label
              for="password"
            >
              Password
            </label>
            <input
              autocomplete="on"
              class="form-text-input"
              id="3"
              name="password"
              placeholder="******"
              type="password"
              value=""
            />
          </div>
          <div
            class="row"
          >
            <button
              class="fs-2 bg-default py-2 px-auto mt-3 rounded button-border-focus"
              type="submit"
            >
              Submit
            </button>
          </div>
        </form>
      </div>
      <div
        class="m-5 text-center col"
      >
        <h3
          class="p-5"
        >
          If you already have a user, you should log in instead
        </h3>
        <a
          class="fs-2 bg-default py-3 px-5 rounded text-decoration-none button-border-focus"
          href="/login"
        >
          Log In
        </a>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Register should render Register component if user is logged in 1`] = `
<DocumentFragment>
  <h1
    class="text-center my-5 p-5 bg-success text-white w-75 mx-auto"
  >
    You are already logged in.
  </h1>
</DocumentFragment>
`;
